<resources>
    <!-- Progress Dialog Helper -->
    <string name="default_inital_msg">Attendere…</string>
    <string name="default_done_msg">Operazione completata con successo!</string>
    <string name="default_animation_name">tick.json</string>

    <!-- App -->
    <string name="app_name">FacciaLibro</string>
    <string name="example_name">Gianni Gaggianni</string>
    <string name="example_personalInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas non cursus metus. Nam pretium rhoncus est, id tincidunt neque congue nec. Aenean vel elementum nisi, vitae eleifend ex. Quisque condimentum tempor lacus eu viverra. Proin pulvinar interdum malesuada. Maecenas quis dui augue. Phasellus et consectetur ligula. Morbi eget egestas nunc, at dictum quam. Nam pharetra non ligula ut molestie. Phasellus non mi vitae dolor bibendum pulvinar.</string>
    <string name="my_friends">I miei amici</string>
    <string name="pager_number_picker_dialog_title">Number of Pages in RecyclerView/View Pager</string>
    <string name="pager_number_picker_dialog_positive_text">Save</string>
    <string name="pager_number_picker_dialog_negative_text">Cancel</string>
    <string name="see_more">Vedi tutti</string>
    <string name="profile">Profilo</string>
    <string name="add_to_friends">Aggiungi agli amici</string>
    <string name="message">Messaggio</string>
    <string name="info">Informazioni</string>
    <string name="share">Condividi</string>
    <string name="personal_info">Informazioni personali</string>
    <string name="programmingLanguages">Linguaggi più usati</string>
    <string name="example_language_1">Java</string>
    <string name="example_language_2">C++</string>
    <string name="example_language_3">Python</string>
    <string name="example_language_4">Scala</string>
    <string name="example_percentage_1">30%</string>
    <string name="example_percentage_2">@string/example_percentage_1</string>
    <string name="example_percentage_3">@string/example_percentage_1</string>
    <string name="example_percentage_4">10%</string>
    <string name="percentage_format">%d%%</string>
    <string name="allProgrammingLanguages">Linguaggi di programmazione</string>
    <string name="ordered_by_usage">Ordinati per uso</string>
    <string name="example_usage">7 persone</string>
    <string name="usage">%d persone</string>
    <string name="operation_running">Operazione in corso…</string>
    <string name="added_to_friends">Aggiunto agli amici!</string>
    <string name="something_went_wrong">Qualcosa è andato storto!</string>
    <string name="kotlin">Kotlin</string>
    <string name="no_message_yet">No message yet.</string>
    <string name="hey_there_kotlin">Hey there, Kotlin!</string>
    <string name="test_message">What\'s up, man?</string>
    <string name="send_msg">Send message</string>
    <string name="latest_posts">Ultimi post</string>
    <string name="example_time">7 febbraio, 12:10</string>
    <string name="example_likes">17 Mi piace</string>
    <string name="like">Mi piace</string>
    <string name="likes">%d Mi piace</string>
    <string name="comment">Commenta</string>
    <string name="see_photo">Visualizza foto</string>
    <string name="post_shared">Post condiviso!</string>
    <string name="change_profile">Cambia profilo</string>
</resources>
