<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.moku.davide.sideproject.profile.UserInformationActivity"
    android:id="@+id/constraintLayout">

    <!-- Try new different things that you can do with ConstraintLayout, even if it doesn't make
         too much sense with the current application, it's just trying out new things -->

    <!-- Test: layout_width="match_constraint"-->

    <TextView
        android:id="@+id/personalInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/personal_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/customTextViewsBold"/>

    <TextView
        android:id="@+id/personalInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_personalInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalInfoTitle" />

    <!-- Test: Weighted chain -->

    <TextView
        android:id="@+id/programmingLanguagesTitle"
        style="@style/customTextViewsBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/programmingLanguages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalInfo" />

    <LinearLayout
        android:id="@+id/firstLanguageLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@id/secondLanguageLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/programmingLanguagesTitle"
        android:background="@color/firstLanguageColor"
        app:layout_constraintHorizontal_weight="0.3">

        <TextView
            android:id="@+id/firstLanguage"
            style="@style/customTextViewsLight"
            android:layout_width="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/example_language_1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/firstPercentage"
            style="@style/customTextViewsLight"
            android:layout_width="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/example_percentage_1"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLanguageLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@id/thirdLanguageLayout"
        app:layout_constraintStart_toEndOf="@+id/firstLanguageLayout"
        app:layout_constraintTop_toTopOf="@+id/firstLanguageLayout"
        android:background="@color/secondLanguageColor"
        app:layout_constraintHorizontal_weight="0.3">

        <TextView
            android:id="@+id/secondLanguage"
            style="@style/customTextViewsLight"
            android:layout_width="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/example_language_2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/secondPercentage"
            style="@style/customTextViewsLight"
            android:layout_width="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/example_percentage_2"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdLanguageLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@id/fourthLanguageLayout"
        app:layout_constraintStart_toEndOf="@+id/secondLanguageLayout"
        app:layout_constraintTop_toTopOf="@+id/secondLanguageLayout"
        android:background="@color/thirdLanguageColor"
        app:layout_constraintHorizontal_weight="0.3">

        <TextView
            android:id="@+id/thirdLanguage"
            style="@style/customTextViewsLight"
            android:layout_width="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/example_language_3"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/thirdPercentage"
            style="@style/customTextViewsLight"
            android:layout_width="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/example_percentage_3"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthLanguageLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/thirdLanguageLayout"
        app:layout_constraintTop_toTopOf="@+id/thirdLanguageLayout"
        android:background="@color/fourthLanguageColor"
        app:layout_constraintHorizontal_weight="0.1">

        <TextView
            android:id="@+id/fourthLanguage"
            style="@style/customTextViewsLight"
            android:layout_width="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/example_language_4"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fourthPercentage"
            style="@style/customTextViewsLight"
            android:layout_width="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/example_percentage_4"
            android:textSize="12sp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
