<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginBottom="10dp"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/postInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.pkmmte.view.CircularImageView
            android:id="@+id/postProfilePic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/example_personalInfo"
            android:src="@drawable/boy" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/postProfilePic"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postName"
                style="@style/customTextViewsBold"
                android:layout_marginBottom="5dp"
                android:text="@string/example_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/postTime"
                style="@style/customTextViewsLight"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/example_time"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/postPhoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/postInfoLayout"
        android:contentDescription="@string/example_personalInfo"
        android:scaleType="centerCrop"
        android:src="@drawable/montain_goat_oh_hai"
        app:layout_constraintDimensionRatio="H,5:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postInfoLayout" />

    <TextView
        android:id="@+id/postLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="8dp"
        android:text="@string/example_likes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postPhoto" />

    <View
        android:id="@+id/postLineDivider"
        style="@style/line"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postLikes"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postLineDivider">

        <Button
            android:id="@+id/postLikeButton"
            style="@style/customPostButtons"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/like" />

        <Button
            android:id="@+id/postCommentButton"
            style="@style/customPostButtons"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/comment" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>