<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="io.moku.davide.sideproject.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/friendsListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="8dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/friendsListTitle"
                style="@style/customTextViewsBold"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:text="@string/my_friends"
                android:textSize="24sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/friendsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/friendsListTitle"
                tools:itemCount="3"
                tools:listitem="@layout/my_friends_small_cell_layout" />

            <RelativeLayout
                android:id="@+id/seeAllFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/friendsRecyclerView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/seeAllTextView"
                        style="@style/customTextViewsLight"
                        android:text="@string/see_more"
                        android:textSize="16sp" />

                    <ImageButton
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/right_arrow" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/latestPostsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/friendsListLayout"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/latestPostsTitle"
                style="@style/customTextViewsBold"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/latest_posts"
                android:textSize="24sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/latestPostsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/latestPostsTitle"
                tools:listitem="@layout/post_cell_layout"
                android:nestedScrollingEnabled="false"/>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
